 - Fixed decision visible for ZSR
 - Fixed tooltip for ZSR nationalization

Content:
 - Victor of the Ivory Coast Civil war should now become Ivory Coast again

Graphics:
 - Added 4 new generic portraits
 - Fixed Polish Portrait Errors

Localisation:
 - Better localisation for 5-year-plan decisions

Performance:
 - Removed unneeded dynamic calls in subideology window

QoL:
 - Debt/International Investment Container in Budget Tab now support the same functionality as the top bar

v1.7.2 - Nov/Dec Patch

AI:
 - Russia no longer attacks the countries of the former USSR if they are in NATO, until 2016
 - Russia no longer attacks the countries of the former USSR if they have guarantors from China, until 2012
 - Russia no longer attacks Azerbaijan if it has a guarantor from Turkey, until 2016
 - AI now knows how to properly distribute military plants for aviation production
 - AI received new army templates.
 - AI will now pay off the full amount of their debt should they have the money available
 - AI should now properly reject economic aid
 - AI will now send his tank armies to the mountains less often. And in general, AI will now not send troops to slaughter in an unsuitable area
 - A new game rule for economic AI, which removes restrictions on the adoption of economic laws

Balance:
 - Updated the popularity drift from operatives
 - Increased Defense for "No Turret" tank turret type: from 4 to 8
 - Decreased conversion cost of "No Turret" tank turret type from 2.25 to 0.75
 - Made tank hulls not producable by default (experimental change)
 - Reduced Manipulate Politics influence cost from 10% to 5% loss to make it more useful
 - Cost tweak to policies so they're slightly more expensive
 - Adjusted some nations starting tax rates
 - Balanced several italian modifiers, added a couple of recurring decisions

Bugfixes:
 - Fixed NATO sharing group if NATO disabled due game rules
 - Fixed Resource Exports disappearing if you lease factories