@@ -1,10 +1,8 @@
 scripted_map_modes = {
-
 	ECOWAS_map_mode = {
 		top = {
 
 		}
-
 		bottom = {
 			type = country
 			color = {
