@@ -1,10 +1,7 @@
 scripted_map_modes = {
-
 	EU_map_mode = {
-
 		top = {
 			type = country
-
 			color = {
 				set_temp_variable = { red = 1 }
 				divide_temp_variable = { red = 255 }
@@ -12,7 +9,6 @@ scripted_map_modes = {
 				divide_temp_variable = { blue = 255 }
 				set_temp_variable = { green = 1 }
 				divide_temp_variable = { green = 255 }
-
 				FROM = {
 					is_in_array = {
 						array = global.EU_member
@@ -98,20 +94,15 @@ scripted_map_modes = {
 						divide_temp_variable = { green = 255 }
 					}
 				}
-
 				set_temp_variable = { alpha = 1.0 }
 				set_temp_variable = { thickness = 10.0 }
 			}
-
 			targets = {
 				target_array = global.EU_potential
 			}
-
 		}
-
 		bottom = {
 			type = country
-
 			color = {
 				set_temp_variable = { red = 148 }
 				divide_temp_variable = { red = 255 }
@@ -120,7 +111,6 @@ scripted_map_modes = {
 				set_temp_variable = { green = 156 }
 				divide_temp_variable = { green = 255 }
 				set_temp_variable = { alpha = 1.0 }
-
 				FROM = {
 					is_in_array = {
 						array = global.EU_potential
@@ -128,7 +118,6 @@ scripted_map_modes = {
 					}
 				}
 			}
-
 			targets = {
 				target_array = global.EU_potential
 			}
@@ -139,5 +128,4 @@ scripted_map_modes = {
 
 		update_daily = no
 	}
-
 }
