@@ -10,7 +10,7 @@ scripted_map_modes = {
 				divide_temp_variable = { green = 255 }
 				set_temp_variable = { blue = 87 }
 				divide_temp_variable = { blue = 255 }
-				set_temp_variable = { alpha = 1.0 }
+				set_temp_variable = { alpha = 1 }
 			}
 			targets = {
 				target_array = global.gcc_member_state
@@ -26,10 +26,10 @@ scripted_map_modes = {
 				divide_temp_variable = { green = 255 }
 				set_temp_variable = { blue = 74 }
 				divide_temp_variable = { blue = 255 }
-				set_temp_variable = { alpha = 1.0 }
+				set_temp_variable = { alpha = 1 }
 			}
 			targets = {
-				target_array = global.possible_gcc_member_state_map
+				target_array = global.possible_gcc_member_state
 			}
 		}
 
