@@ -1,30 +1,0 @@
-scripted_map_modes = {
-
-	# nato_map_mode = {
-
-	# 	top = {
-	# 		type = country
-
-	# 		color = {
-	# 			set_temp_variable = { red = 0.267 }
-	# 			set_temp_variable = { blue = 1.0 }
-	# 			set_temp_variable = { green = 0.462 }
-	# 			set_temp_variable = { alpha = 1.0 }
-
-	# 			FROM = { has_idea = NATO_member }
-	# 		}
-
-	# 	}
-
-	# 	bottom = {
-	# 		type = none
-	# 	}
-
-	# 	far_text = country
-	# 	near_text = none
-
-	# 	update_daily = yes
-
-	# }
-
-}
