@@ -1,0 +1,64 @@
+scripted_map_modes = {
+	SCO_map_mode = {
+		top = {
+			type = country
+			color = {
+				set_temp_variable = { red = 255 }
+				divide_temp_variable = { red = 255 }
+				set_temp_variable = { green = 0 }
+				divide_temp_variable = { green = 255 }
+				set_temp_variable = { blue = 0 }
+				divide_temp_variable = { blue = 255 }
+				set_temp_variable = { alpha = 1 }
+				FROM = {
+					OR = {
+						is_sco = yes
+						has_idea = sco_observer 
+					}
+					if = { 
+						limit = { 
+							is_sco = yes
+						}
+						set_temp_variable = { red = 255 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { green = 0 }
+						divide_temp_variable = { green = 255 }
+						set_temp_variable = { blue = 0 }
+						divide_temp_variable = { blue = 255 }
+					}
+					else_if = {
+						limit = { 
+							has_idea = sco_observer
+						}
+						set_temp_variable = { red = 255 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 180 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 120 }
+						divide_temp_variable = { green = 255 }
+					}
+				}
+			}
+			targets = { target_array = global.possible_sco_member_state }
+		}
+
+		bottom = {
+			type = country
+			color = {
+				set_temp_variable = { red = 255 }
+				divide_temp_variable = { red = 255 }
+				set_temp_variable = { green = 65 }
+				divide_temp_variable = { green = 255 }
+				set_temp_variable = { blue = 65 }
+				divide_temp_variable = { blue = 255 }
+				set_temp_variable = { alpha = 1 }
+			}
+			targets = { target_array = global.possible_sco_member_state }
+		}
+
+		far_text = country
+		near_text = none
+
+		update_daily = no
+	}
+}
