@@ -1,10 +1,8 @@
 scripted_map_modes = {
 	influence_map_mode = {
-
 		top = {
 			type = none
 		}
-
 		bottom = {
 			type = country
 			color = {
@@ -50,7 +48,6 @@ scripted_map_modes = {
 				set_temp_variable = { alpha = 1.00 }
 			}
 		}
-
 
 		far_text = country
 		near_text = none
