@@ -115,8 +115,6 @@ scripted_map_modes = {
 
 			thickness = yes
 		}
-
-
 		# if we want to show texts on map this you can set far_text & near_text
 		# must be one of the:
 		#  none
@@ -131,6 +129,5 @@ scripted_map_modes = {
 		# if yes, the game will update the map mode daily_update
 		# otherwise force_update_map_mode effect can be used
 		update_daily = yes
-
 	}
 }
