@@ -2512,6 +2512,7 @@ on_actions = {
 
 			# Organizational Arrays & Continent Arrays
 			SAU = {
+				#GCC
 				#All Potential Nations
 				add_to_array = { global.possible_gcc_member_state = SAU }
 				add_to_array = { global.possible_gcc_member_state = QAT }
@@ -2525,13 +2526,6 @@ on_actions = {
 				add_to_array = { global.possible_gcc_member_state = YEM }
 				add_to_array = { global.possible_gcc_member_state = EGY }
 
-				#All Potential Nations for Map Mode
-				add_to_array = { global.possible_gcc_member_state_map = MOR }
-				add_to_array = { global.possible_gcc_member_state_map = JOR }
-				add_to_array = { global.possible_gcc_member_state_map = IRQ }
-				add_to_array = { global.possible_gcc_member_state_map = YEM }
-				add_to_array = { global.possible_gcc_member_state_map = EGY }
-
 				#Starting GCC Member States
 				add_to_array = { global.gcc_member_state = SAU }
 				add_to_array = { global.gcc_member_state = QAT }
@@ -2540,6 +2534,50 @@ on_actions = {
 				add_to_array = { global.gcc_member_state = KUW }
 				add_to_array = { global.gcc_member_state = OMA }
 			}
+
+			# SCO
+			add_to_array = { global.possible_sco_member_state = CHI }
+			add_to_array = { global.possible_sco_member_state = AFG }
+			add_to_array = { global.possible_sco_member_state = ARM }
+			add_to_array = { global.possible_sco_member_state = AZE }
+			add_to_array = { global.possible_sco_member_state = BHR }
+			add_to_array = { global.possible_sco_member_state = BAN }
+			add_to_array = { global.possible_sco_member_state = BHU }
+			add_to_array = { global.possible_sco_member_state = BRU }
+			add_to_array = { global.possible_sco_member_state = GEO }
+			add_to_array = { global.possible_sco_member_state = RAJ }
+			add_to_array = { global.possible_sco_member_state = IND }
+			add_to_array = { global.possible_sco_member_state = PER }
+			add_to_array = { global.possible_sco_member_state = IRQ }
+			add_to_array = { global.possible_sco_member_state = ISR }
+			add_to_array = { global.possible_sco_member_state = JAP }
+			add_to_array = { global.possible_sco_member_state = JOR }
+			add_to_array = { global.possible_sco_member_state = KAZ }
+			add_to_array = { global.possible_sco_member_state = KOR }
+			add_to_array = { global.possible_sco_member_state = KUW }
+			add_to_array = { global.possible_sco_member_state = KYR }
+			add_to_array = { global.possible_sco_member_state = LAO }
+			add_to_array = { global.possible_sco_member_state = MAY }
+			add_to_array = { global.possible_sco_member_state = MON }
+			add_to_array = { global.possible_sco_member_state = BRM }
+			add_to_array = { global.possible_sco_member_state = NEP }
+			add_to_array = { global.possible_sco_member_state = NKO }
+			add_to_array = { global.possible_sco_member_state = PAK }
+			add_to_array = { global.possible_sco_member_state = PHI }
+			add_to_array = { global.possible_sco_member_state = QAT }
+			add_to_array = { global.possible_sco_member_state = SOV }
+			add_to_array = { global.possible_sco_member_state = SAU }
+			add_to_array = { global.possible_sco_member_state = SIN }
+			add_to_array = { global.possible_sco_member_state = SRI }
+			add_to_array = { global.possible_sco_member_state = SYR }
+			add_to_array = { global.possible_sco_member_state = TAJ }
+			add_to_array = { global.possible_sco_member_state = SIA }
+			add_to_array = { global.possible_sco_member_state = TUR }
+			add_to_array = { global.possible_sco_member_state = TRK }
+			add_to_array = { global.possible_sco_member_state = UAE }
+			add_to_array = { global.possible_sco_member_state = UZB }
+			add_to_array = { global.possible_sco_member_state = VIE }
+			add_to_array = { global.possible_sco_member_state = YEM }
 
 			# Nato Member Array Configuration
 			if = { limit = { has_start_date < 2000.1.2 }
