@@ -3,10 +3,7 @@
  MAPMODE_EU_MAP_MODE: "EU Map Mode"
  MAPMODE_EU_MAP_MODE_DESCRIPTION: "Member States (dark) and potential Member States (bright) of the EU."
  EU_map_mode_tooltip: "EU Map Mode"
- EU_map_mode_tooltip_delayed: "Member in darker blue and potential member states in bright blue.\n\nOffice Holders:\nDarker Red - President of the European Commission, President of the European Council, and President of the European Parliament\nBrown - Secretary General of EuroNavy\nDark Green - Secretary General of EuroArmy\nTurquoise - High Representative of the Union for Foreign Affairs and Security Policy\nPurple - European Minister of Economy and Finance\nYellow - President of the European Central Bank\nLight Green - Frontex Director\nOrange - EU Ambassador to the United Nations\nPink - "
- MAPMODE_NATO_MAP_MODE_NAME: "NATO Map Mode"
- MAPMODE_NATO_MAP_MODE: "NATO Map Mode"
- MAPMODE_NATO_MAP_MODE_DESCRIPTION: "Member States of NATO."
+ EU_map_mode_tooltip_delayed: "Member in darker blue and potential member states in bright blue.\n\nOffice Holders:\nDarker Red - President of the European Commission, President of the European Council, and President of the European Parliament\nBrown - Secretary General of EuroNavy\nDark Green - Secretary General of EuroArmy\nTurquoise - High Representative of the Union for Foreign Affairs and Security Policy\nPurple - European Minister of Economy and Finance\nYellow - President of the European Central Bank\nLight Green - Frontex Director\nOrange - EU Ambassador to the United Nations\nPink - President of the European Federation"
  MAPMODE_MISSILES_MAP_MODE_NAME: "Missiles Map Mode"
  MAPMODE_MISSILES_MAP_MODE: "Missiles Map Mode"
  MAPMODE_MISSILES_MAP_MODE_DESCRIPTION: "Launch Points (green) and Target Points (red) of missiles from selected country (Missiles Launch GUI, selected country)." #to do: It shows firing missiles when they are selected in the GUI and it shows missiles on alert, when they are selected.
@@ -24,11 +21,16 @@
  influence_map_mode_tooltip_delayed: "The player is colored in green, pink nations you are the first influencer, blue you are the second or third influencer, light purple you are a influencer between fourth and seventh position, and everything uncolored you have no influence. The map mode is updated weekly."
  MAPMODE_GCC_MAP_MODE_NAME: "GCC Map Mode"
  MAPMODE_GCC_MAP_MODE: "GCC Map Mode"
- MAPMODE_GCC_MAP_MODE_DESCRIPTION: "Member States (dark green) and potential Member States (bright green) of the GCC."
+ MAPMODE_GCC_MAP_MODE_DESCRIPTION: "Member states (dark green) and potential member states (bright green) of the GCC."
  GCC_map_mode_tooltip: "GCC Map Mode"
  GCC_map_mode_tooltip_delayed: "Member in darker green and potential member states in bright green."
  MAPMODE_ECOWAS_MAP_MODE_NAME: "ECOWAS Map Mode"
  MAPMODE_ECOWAS_MAP_MODE: "ECOWAS Map Mode"
- MAPMODE_ECOWAS_MAP_MODE_DESCRIPTION: "Member States (dark green) and of the ECOWAS."
+ MAPMODE_ECOWAS_MAP_MODE_DESCRIPTION: "Member states (dark green) of the ECOWAS."
  ECOWAS_map_mode_tooltip: "ECOWAS Map Mode"
  ECOWAS_map_mode_tooltip_delayed: "Member in darker green."
+ MAPMODE_SCO_MAP_MODE_NAME: "SCO Map Mode"
+ MAPMODE_SCO_MAP_MODE: "SCO Map Mode"
+ MAPMODE_SCO_MAP_MODE_DESCRIPTION: "Member states (red), observers (pink) and potential member states (light red) of the SCO."
+ SCO_map_mode_tooltip: "SCO Map Mode"
+ SCO_map_mode_tooltip_delayed: "Member states in red, observers in pink and potential member states in light red."
