@@ -37,12 +37,12 @@
 
  #Tooltips
  TT_HAS_CHOSEN_5_YEAR_FOCUS: "We have chosen at least 1 area to focus on for our 5-year-plan"
- TT_5_YEAR_PLAN_CURRENT_EFFECTS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: [?five_year_plan_political_power_factor|%=+0]\n§Y$infrastructure$§! construction speed: [?five_year_plan_infra_factor|%=+2]\n§Y$air_base$§! construction speed: [?five_year_plan_air_base_factor|%=+2]\n§Y$anti_air_building$§! construction speed: [?five_year_plan_anti_air_factor|%=+2]\n§YStrategic Fuel Reserve§! construction speed: [?five_year_plan_fuel_reserve_factor|%=+2]\n§YIntelligence Station§! construction speed: [?five_year_plan_intelligence_station_factor|%=+2]\n§Y$internet_station$§! construction speed: [?five_year_plan_mobile_radio_mast_factor|%=+2]\n§Y$arms_factory$§! construction speed: [?five_year_plan_MIC_factor|%=+2]\n§Y$industrial_complex$§! construction speed: [?five_year_plan_CIC_factor|%=+2]\n§Y$offices$§! construction speed: [?five_year_plan_office_factor|%=+2]\n§Y$dockyard$§! construction speed: [?five_year_plan_NIC_factor|%=+2]\n§Y$synthetic_refinery$§! construction speed: [?five_year_plan_refinery_factor|%=+2]\n§Y$naval_base$§! construction speed: [?five_year_plan_naval_base_factor|%=+2]\n§Y$bunker$§! construction speed: [?five_year_plan_land_bunker_factor|%=+2]\n§Y$coastal_bunker$§! construction speed: [?five_year_plan_coastal_bunker_factor|%=+2]\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ [?five_year_plan_resources_factor|%=+2]"
- TT_5_YEAR_PLAN_CIVILIAN_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §G+15.00%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §G+15.00%§!\n§Y$offices$§! construction speed: §G+15.00%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
- TT_5_YEAR_PLAN_MILITARY_INFRASTRUCTURE_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §G+15.00%§!\n§Y$anti_air_building$§! construction speed: §G+15.00%§!\n§YStrategic Fuel Reserve§! construction speed: §G+15.00%§!\n§YIntelligence Station§! construction speed: §G+15.00%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §G+15.00%§!\n§Y$coastal_bunker$§! construction speed: §G+15.00%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
- TT_5_YEAR_PLAN_MILITARY_PRODUCTION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §R-7.50%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §G+15.00%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §G+15.00%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §G+15.00%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §R-7.50%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
- TT_5_YEAR_PLAN_NAVAL_EXPANSION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §R-7.50%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §G+15.00%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §G+15.00%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
- TT_5_YEAR_PLAN_RESOURCE_EXPLOITATION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §G+15.00%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §G+15.00%§!\n§Y$naval_base$§! construction speed: §R-7.50%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §G+15.00%§!\n"
+ TT_5_YEAR_PLAN_CURRENT_EFFECTS: "This will impact the 5-Year-Plan with modifiers:\n$MODIFIER_POLITICAL_POWER_FACTOR$: [?five_year_plan_political_power_factor|%=+0]\n§Y$infrastructure$§! construction speed: [?five_year_plan_infra_factor|%=+2]\n§Y$air_base$§! construction speed: [?five_year_plan_air_base_factor|%=+2]\n§Y$anti_air_building$§! construction speed: [?five_year_plan_anti_air_factor|%=+2]\n§Y$fuel_silo$§! construction speed: [?five_year_plan_fuel_reserve_factor|%=+2]\n§Y$radar_station$§! construction speed: [?five_year_plan_intelligence_station_factor|%=+2]\n§Y$internet_station$§! construction speed: [?five_year_plan_mobile_radio_mast_factor|%=+2]\n§Y$arms_factory$§! construction speed: [?five_year_plan_MIC_factor|%=+2]\n§Y$industrial_complex$§! construction speed: [?five_year_plan_CIC_factor|%=+2]\n§Y$offices$§! construction speed: [?five_year_plan_office_factor|%=+2]\n§Y$dockyard$§! construction speed: [?five_year_plan_NIC_factor|%=+2]\n§Y$synthetic_refinery$§! construction speed: [?five_year_plan_refinery_factor|%=+2]\n§Y$naval_base$§! construction speed: [?five_year_plan_naval_base_factor|%=+2]\n§Y$bunker$§! construction speed: [?five_year_plan_land_bunker_factor|%=+2]\n§Y$coastal_bunker$§! construction speed: [?five_year_plan_coastal_bunker_factor|%=+2]\n$MODIFIER_LOCAL_RESOURCES_FACTOR$: [?five_year_plan_resources_factor|%=+2]"
+ TT_5_YEAR_PLAN_CIVILIAN_FOCUS: "This will impact the 5-Year-Plan with modifiers:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§Y$fuel_silo$§! construction speed: §R-7.50%§!\n§Y$radar_station$§! construction speed: §R-7.50%§!\n§Y$internet_station$§! construction speed: §G+15.00%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §G+15.00%§!\n§Y$offices$§! construction speed: §G+15.00%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$: §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_MILITARY_INFRASTRUCTURE_FOCUS: "This will impact the 5-Year-Plan with modifiers:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §G+15.00%§!\n§Y$anti_air_building$§! construction speed: §G+15.00%§!\n§Y$fuel_silo$§! construction speed: §G+15.00%§!\n§Y$radar_station$§! construction speed: §G+15.00%§!\n§Y$internet_station$§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §G+15.00%§!\n§Y$coastal_bunker$§! construction speed: §G+15.00%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$: §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_MILITARY_PRODUCTION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §R-5%§!\n§Y$infrastructure$§! construction speed: §R-7.50%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §G+15.00%§!\n§Y$fuel_silo$§! construction speed: §R-7.50%§!\n§Y$radar_station$§! construction speed: §R-7.50%§!\n§Y$internet_station$§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §G+15.00%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §G+15.00%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §R-7.50%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$: §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_NAVAL_EXPANSION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §R-5%§!\n§Y$infrastructure$§! construction speed: §R-7.50%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§Y$fuel_silo$§! construction speed: §R-7.50%§!\n§Y$radar_station$§! construction speed: §R-7.50%§!\n§Y$internet_station$§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §G+15.00%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §G+15.00%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$: §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_RESOURCE_EXPLOITATION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§Y$fuel_silo$§! construction speed: §G+15.00%§!\n§Y$radar_station$§! construction speed: §R-7.50%§!\n§Y$internet_station$§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §G+15.00%§!\n§Y$naval_base$§! construction speed: §R-7.50%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$: §G+15.00%§!\n"
  TT_ABANDON_5_YEAR_PLAN: "§H[Root.GetLeader]§! disappears mysteriously.\nLuckily there is someone from the §H[show_ruling_party]§! who is very eager to serve as the leader\n\n"
  TT_HAS_20_INFLUENCE: "The target has at least 20% influence on us"
  TT_HAS_INVESTMENTS: "The target has §YInternational Investments§!"
