@@ -27,8 +27,9 @@ Localisation:
 Performance:
  - Removed unneeded dynamic calls in subideology window
 
-QoL:
+Quality of Life (QoL):
  - Debt/International Investment Container in Budget Tab now support the same functionality as the top bar
+ - New map modes: SCO (Shanghai Cooperation Organisation)
 
 v1.7.2 - Nov/Dec Patch
 
